alexandria-ui: fix bug loading fonts in ui template

--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-embedded-display.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-embedded-display.html
@@ -8,8 +8,9 @@
     </template>
 
     <style>
-        :host {
+        :host, :host #layer {
             width: 100%;
+            @apply(--alexandria-stamp-embedded-display);
         }
     </style>
 
