alexandria-ui: fix bug in catalogs when refreshing items if opened item is present

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
@@ -15,6 +15,7 @@
             this._catalog = catalog;
             this._showLabel = catalog.embedded && catalog.label !== "";
             this._hideGroupings = this._catalog.hideGroupings;
+            if (!$(this.$.panel).hasClass("hidden")) $(this.$.main).addClass("hidden");
         },
 
         _refreshFiltered : function(value) {
