Added hover property for items

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -168,6 +168,9 @@
         :host .container .content {
             @apply(--alexandria-catalog-item);
         }
+        :host .container .content:hover {
+            @apply(--alexandria-catalog-item-hover);
+        }
         :host .container .content .selector {
             visibility: hidden;
             opacity: 0;
