--- a/alexandria/ui-elements/src/widgets/alexandria-temporal-range-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-temporal-range-catalog.html
@@ -55,6 +55,7 @@
             border: 1px solid #ddd;
             border-left: 0;
             width: 1px;
+            @apply(--alexandria-temporal-range-catalog-container);
         }
         :host .main.Vertical {
             position: relative;
