alexandria-ui: Dialog refactors

--- a/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
+++ b/alexandria/ui-elements/src/widgets/dialogs/alpaca.html
@@ -279,7 +279,7 @@
         var path = parent == null ? input.options.name : "";
 
         if (parent != null)
-            path = (isSection(parent) || isMultiple(parent) ? parent.options.name + input.getPath() : input.getPath()) + (path != "" ? "." + path : "");
+            path = (isSection(parent) || isMultiple(parent) ? parent.schema.inputName + input.getPath() : input.getPath()) + (path != "" ? "." + path : "");
 
         path = path.replace(/\//g, ".");
         path = path.replace("[", "");
