Fix bug loading home page if only one element is visible

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-grouping-list.html
@@ -145,6 +145,7 @@
                 var mode = this.histogramsMode;
 
                 if (mode === "Disabled") {
+                    this._checked = false;
                     this.$.toolbar.hidden = true;
                     return;
                 }
