--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-list.html
@@ -198,6 +198,7 @@
             margin: 0 15px;
             border-left: 10px solid var(--accent-color);
             min-height: 38px;
+            @apply(--alexandria-catalog-item-expanded);
         }
         :host .embedded_true .list .item.expanded .content {
             border-left: 0;
