alexandria-rest: AlexandriaSparkBuilder, added parameter if not null alexandria-ui: Added style customization for alexandria-operation-trigger

--- a/alexandria/ui-elements/src/widgets/_common/alexandria-operation-trigger.html
+++ b/alexandria/ui-elements/src/widgets/_common/alexandria-operation-trigger.html
@@ -28,6 +28,7 @@
         }
         :host .mode .option {
             display: none;
+            @apply(--alexandria-operation-trigger-option);
         }
         :host .mode.Icon .option.Icon {
             display: block;
