--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-icon.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-icon.html
@@ -23,6 +23,9 @@
     </template>
 
     <style>
+        :host iron-icon {
+            @apply(--alexandria-stamp-icon);
+        }
     </style>
 
     <script>
