--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-rating.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-rating.html
@@ -6,7 +6,7 @@
 
     <template>
         <paper-rating class$="rating [[stamp.classes]]" icon$="[[stamp.properties.icon]]"
-                      rating$="[[stamp.value]]" disabled style$="[[_style]]"
+                      rating$="[[stamp.value]]" disabled style$="[[_style]]" title="[[stamp.label]]"
                       hidden$="[[!stamp.value.length]]" max="[[stamp.properties.max]]" on-tap="_change"></paper-rating>
     </template>
 
