alexandria-ui: optimizations

--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-description.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-description.html
@@ -19,6 +19,11 @@
         :host .description .tag {
             color: black;
             margin-right: 7px;
+            @apply(--alexandria-stamp-description-tag);
+        }
+        :host .description .suffix {
+            margin-left: 4px;
+            @apply(--alexandria-stamp-description-suffix);
         }
     </style>
 
