added both pie and timeline chart types

--- a/alexandria/ui-elements/src/widgets/alexandria-panel.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-panel.html
@@ -143,6 +143,7 @@
         :host #tabs-content {
             height: calc(100% - 30px);
             overflow: auto;
+            @apply(--alexandria-panel-tabs-content);
         }
         :host #tabs-content.with_summary_true {
             overflow: hidden !important;
