--- a/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/stamps/alexandria-stamp-behavior.html
@@ -8,11 +8,13 @@
         properties : {
             stamp : { type: Object, observer: '_init', value: function() { return null; } },
             _style: { type: String, value: function() { return ""; } },
-            _zombie : Object
+            _zombie : Object,
+            _classes : String
         },
 
         _init : function() {
             if (this.stamp == null) return;
+            if (this._classes == null) this._classes = $(this).attr("class");
             this._updateClassName();
             this._updateStyle();
             this._render();
@@ -27,6 +29,8 @@
 
         _updateClassName : function () {
             var properties = this.stamp.properties;
+            $(this).attr("class", this._classes);
+            this.scopeSubtree(this, true);
             if (this.stamp.layout.toLowerCase().indexOf("flexible") != -1) $(this).addClass("flex");
             if (properties == null) return;
             if (this.stamp.properties.className == null) return;
