--- a/alexandria/ui-elements/src/widgets/_common/mold/alexandria-mold-stamps.html
+++ b/alexandria/ui-elements/src/widgets/_common/mold/alexandria-mold-stamps.html
@@ -2,6 +2,7 @@
 <link rel="import" href="stamps/alexandria-stamp-card-wallet.html">
 <link rel="import" href="stamps/alexandria-stamp-timeline.html">
 <link rel="import" href="stamps/alexandria-stamp-pie.html">
+<link rel="import" href="stamps/alexandria-stamp-histogram.html">
 <link rel="import" href="stamps/alexandria-stamp-catalog-link.html">
 <link rel="import" href="stamps/alexandria-stamp-description.html">
 <link rel="import" href="stamps/alexandria-stamp-download-operation.html">
