--- a/alexandria/ui-elements/src/widgets/alexandria-menu-layout.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-menu-layout.html
@@ -23,7 +23,7 @@
     <template>
         <cotton-layout id="layout" title="[[_title]]" subtitle="[[_subtitle]]" logo="[[_logo]]"
                        tabs="[[_layoutTabList]]" selected-tab="0"
-                       on-logout="_logout" on-edit-profile="_editProfile" on-home="home">
+                       on-logout="_logout" on-edit-profile="_editProfile" on-home="_home">
 
             <div id="user-content">
                 <content select="#header-content"></content>
@@ -172,7 +172,7 @@
                 if (this._itemList == null || this._itemList.length <= 0) return;
                 if (label == null) return;
                 if (label == 0) label = this._itemList[0].label;
-                window.setTimeout(() => this.openItem(this._nameFromLabel(label)), 100);
+                window.setTimeout(() => this.fire("open-item", this._nameFromLabel(label)), 100);
             },
 
             _refreshOpened : function(opened) {
