--- a/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-tab-layout.html
@@ -22,7 +22,7 @@
         <cotton-layout id="layout" title="[[_title]]" subtitle="[[_subtitle]]" logo="[[_logo]]"
                        tabs="[[_itemTabList]]" selected-tab="{{_openedItemIndex}}"
                        on-select-tab="_openItemByEvent" on-logout="_logout" on-edit-profile="_editProfile"
-                       on-home="home">
+                       on-home="_home">
 
             <div id="user-content">
                 <content select="#header-content"></content>
