alexandria-ui: fix history bugs

--- a/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
+++ b/alexandria/ui-elements/src/widgets/_common/catalog/alexandria-catalog-behavior.html
@@ -36,6 +36,10 @@
             toast.open();
         },
 
+        _openDefaultItem : function(name) {
+            this.openItem(name);
+        },
+
         _closeItemsArrival : function() {
             var toast = this.querySelector("paper-toast#itemsArrival");
             if (toast != null) toast.close();
