alexandria-ui: do not refresh current view if already updated

--- a/alexandria/ui-elements/src/widgets/alexandria-catalog.html
+++ b/alexandria/ui-elements/src/widgets/alexandria-catalog.html
@@ -119,14 +119,14 @@
         :host .breadcrumbs paper-button {
             background: white;
             color: black;
-            border: 1px solid #388e3b;
+            border: 1px solid var(--default-primary-color);
             padding: 0 25px;
             border-radius: 30px;
             height: 31px;
             margin-top: 7px;
         }
         :host .breadcrumbs paper-button:hover {
-            background: #388e3b;
+            background: var(--default-primary-color);
             opacity: 0.9;
             color: white;
         }
